--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 .input-box {
-    @apply border-2 border-slate-300 w-20 text-center rounded-lg
+    @apply border-2 border-slate-300 min-w-20 w-full text-center rounded-lg
 }
+
 
